# Reef-acoustics-and-AI

./: .gitignore  Boxplot_accuracies.ipynb  LICENSE  README.md  pyproject.toml  vggish-env.yml
Audioset/: pretrained_NN_script.py  test_calc_features.ipynb
Code/: Boxplot_accuracies.ipynb  CNN_minibatch_creation.ipynb  CNN_training.ipynb  Feature_extraction_with_compound_index.ipynb  Produce_a_custom_pretrained_CNN.ipynb  Random_forests,_Compound_index,_Indo_habitat.ipynb  Random_forests_Compound_index_Indo_habitat.ipynb  Random_forests_compound_index_Aus_habitat.ipynb  Random_forests_compound_index_Aus_site.ipynb  Random_forests_compound_index_Indo_habitat.ipynb  Random_forests_compound_index_Indo_site.ipynb  Random_forests_compound_index_Poly_habitat.ipynb  Random_forests_compound_index_Poly_site.ipynb  Random_forests_pretrained_CNN_Aus_habitat.ipynb  Random_forests_pretrained_CNN_Aus_site.ipynb  Random_forests_pretrained_CNN_Indo_habitat.ipynb  Random_forests_pretrained_CNN_Indo_site.ipynb  Random_forests_pretrained_CNN_Poly_habitat.ipynb  Random_forests_pretrained_CNN_Poly_site.ipynb  Splitting_and_dowsampling_audio_files.ipynb  Trained_CNN_accuracy_calculator.ipynb  UMAP_Aus.ipynb  UMAP_Indo.ipynb  vggish-env.yml
Code/Audioset/: pretrained_NN_script.py  test_calc_features.py
Code/compound_index/: compound_index_extraction.ipynb  rf_compound_index_aus_site.ipynb  rf_compound_index_indo_habitat.ipynb  rf_compound_index_indo_site.ipynb  (+1 more)
Code/misc/: boxplots.ipynb  (+2 more)
Tutorial/: 2-Feature_Extraction.ipynb  2_Feature_Extraction.ipynb  3-Unsupervised_Learning.ipynb
(+15 files in other folders)
