[project]
name = "reef-acoustics-and-ai"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-maad>=1.4.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.0",
    "tensorflow-hub>=0.16.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]
